WIP; Add gwfixbase to gwsetup

--- a/bin/setup/lang/welcome.htm
+++ b/bin/setup/lang/welcome.htm
@@ -287,6 +287,11 @@ en: <a href="gwsetup?lang=%l;v=gwdiff.htm">Compute the difference between two ba
 fr: <a href="gwsetup?lang=%l;v=gwdiff.htm">Calcule la différence entre deux bases</a>
 ] (gwdiff)
 
+<li>[
+co: <a href="gwsetup?lang=%l;v=gwfix.htm">Currege una basa et calculeghja torna l’indici</a>
+en: <a href="gwsetup?lang=%l;v=gwfix.htm">Fix a base and recompute index</a>
+fr: <a href="gwsetup?lang=%l;v=gwfix.htm">Corrige une base et recalcule les index</a>
+] (gwfixbase)
 
 </ul>
 </div>
