Implement RGPD (and half_rgpd) for Roglo

--- a/bin/setup/lang/gwc.htm
+++ b/bin/setup/lang/gwc.htm
@@ -58,7 +58,7 @@ sv: Skriv in det kompletta namnet för din <font
 <table class="setup">
 <tr align=left><td>
 <ul><li>[
-en: Select the source file or navigate in your foldres.
+en: Select the source file or navigate in your folders.
 fr: Sélectionnez le nom du fichier source, ou naviguez dans vos dossiers.
 ]
 
@@ -135,6 +135,22 @@ lv: Ja nekas netiks ierakstîts, datu bâzes nosaukums tiks izveidots
     no GeneWeb resursdatnes nosaukuma.
 sv: Om du inte skriver någonting, kommer namnet att bli härlätt
     från <font color=#2f6400><b>GeneWeb</b></font> källfilens namn.
+]
+</td></tr>
+</table>
+<p>
+<li>
+[
+en: Enter the name of the folder containing RGPD consent files.
+fr: Entrez le nom du dossier contenant les fichiers de consentement RGPD.
+]
+<p>
+<table class="setup">
+<tr align=left><td>
+<input name=rgpd size=30>
+[
+en: This folder should be located in the same folder as the bases (%w).
+fr: Ce dossier devrait être au même endroit que les bases (%w).
 ]
 </td></tr>
 </table>
